<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="latest_news"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_latest_news_short"
        android:shortcutLongLabel="@string/shortcut_latest_news_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.newshub.android"
            android:targetClass="com.newshub.android.MainActivity">
            <extra android:name="shortcut_action" android:value="latest_news" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="search_news"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.newshub.android"
            android:targetClass="android.newshub.android.MainActivity">
            <extra android:name="shortcut_action" android:value="search_news" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="bookmarks"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_foreground"
        android:shortcutShortLabel="@string/shortcut_bookmarks_short"
        android:shortcutLongLabel="@string/shortcut_bookmarks_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.newshub.android"
            android:targetClass="android.newshub.android.MainActivity">
            <extra android:name="shortcut_action" android:value="bookmarks" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
